add_subdirectory(oscar_compiler_configuration)
add_subdirectory(oscar)
add_subdirectory(oscar_bookofshaders)
add_subdirectory(oscar_demos)
add_subdirectory(oscar_learnopengl)
if (${OSC_BUILD_OPENSIMCREATOR})
    add_subdirectory(oscar_simbody)
    add_subdirectory(OpenSimThirdPartyPlugins)
    add_subdirectory(OpenSimCreator)
endif()
